<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SecurityBMS">

    <Button
        android:id="@+id/btnLock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnlock" />

    <Button
        android:id="@+id/btnMagnetYard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDoorYard" />

    <Button
        android:id="@+id/btnMagnetEntr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDoorEntr" />

    <Button
        android:id="@+id/btnEyeBed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnEyeBed" />

    <Button
        android:id="@+id/btnEyeDoor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnEyeDoor" />

    <Button
        android:id="@+id/btnLockDoorEntr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLockDoorEntr" />

</LinearLayout>